# sector-tsdb

./: .clang-format  CMakeLists.txt  Readme.md  continuous_running_example.cpp  test_common.cpp  test_crc.cpp  test_header_sectors_manager.cpp  test_io.cpp  test_series.cpp  test_simulated.cpp
tsdb/: common.h  crc.h  exception.h  header_sectors_manager.h  io.h  logger.h  partition.h  sector_defs.h  series.h
